--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -45,8 +45,8 @@
         <p class="intro">You can also get in touch with us here.</p>
         <div class="row">
             <ul class="other-info list-unstyled col-md-6 col-sm-10 col-xs-12 col-md-offset-3 col-sm-offset-1 xs-offset-0" >
-                <li><i class="fa fa-envelope-o"></i><a href="#">contact@techrise.com</a></li>
-                <li><i class="fa fa-twitter"></i><a href="#" target="_blank">@techrise_nepal</a></li>
+                <li><i class="fa fa-envelope-o"></i><a href="mailto:contact@techrise.com">contact@techrise.com</a></li>
+                <li><i class="fa fa-facebook"></i><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts" target="_blank">TECHRISE Facebook Page</a></li>
                 <li><i class="fa fa-phone"></i><a href="tel:+818061747394">+81 080 6174 7394</a></li>
                 <!-- <li><i class="fa fa-map-marker"></i>Queen Square <br /> 56 College Green Road<br />BS1 XR18<br />Bristol<br />UK</li> -->
             </ul>
@@ -71,8 +71,8 @@
 <section id="cta-section" class="section cta-section text-center contact-cta-section">
     <div class="container">
        <h2 class="title">Ready to start coding with Techrise?</h2>
-         <p class="intro">Sign up to get <span class="counting">instant access</span> to course materials and a personal mentor.</p>
-         <p><a class="btn btn-cta btn-cta-primary" href="/users/sign_up" target="_blank">Sign Up Now</a></p>
+         <p class="intro">We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, <span class="counting">completely free of charge</span>.</p>
+         <p><a class="btn btn-cta btn-cta-primary" href="/" target="_blank">Sign Up Now</a></p>
     </div><!--//container-->
 </section><!--//cta-section-->
 
