--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -267,6 +267,7 @@
   <section class="section">
     <div class="container text-center">
         <div class="item">
+          <div class="row">
             <div class="col-xs-12 col-md-4">
               <%= image_tag 'landing_page/ganesh.jpg', class: 'prof_pic' %>
             </div>
@@ -279,7 +280,26 @@
 
                 </blockquote>
                 <p class="source" style="color:#333;">Ganesh Man Lama<br /><small>President, Air Asia X Nepal | Managing Director, Incentive Group of Companies</small></p>
+            </div><!--col-xs-12 col-md-8--> 
+          </div>                        
+        </div><!--//item-->
+
+        <div class="item" style="margin-top:40px;">
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              <%= image_tag 'landing_page/lizanderson.jpg', class: 'prof_pic' %>
+            </div>
+            <div class="col-xs-12 col-md-8">
+                <blockquote>
+                <i class="fa fa-quote-left" style="float: left; margin-right: 5px;"></i>
+                <p style="text-align: justify;">
+                  TECHRISE is more than a coding camp - it's a vehicle for empowering the youth of Nepal with the knowledge and tools they need to unlock their true economic and personal potential. Because the TECHRISE model requires former students to also become teachers, the organization is creating a network effect for sustainable and long-term transformative change. One student at a time, TECHRISE is not only changing lives at an individual level, but is also building a highly skilled workforce that has the potential to grow Nepal's economic stability as a whole.
+                </p>
+
+                </blockquote>
+                <p class="source" style="color:#333;"> Liz Anderson<br /><small>Director of Engagement, Beeck Center for Social Impact + Innovation at Georgetown University</small></p>
             </div><!--col-xs-12 col-md-8-->                         
+          </div>
         </div><!--//item-->
     </div>
   </section>
