--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,7 +13,7 @@
     <div class="container text-center">                
         <h1 class="title">Coding Bootcamp in Nepal<br/>Become a web developer in 3 months</h2>
         <p class="intro">
-          We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, completely free of charge. If you are interested, please sign up below.
+          We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, completely free of charge.
         </p>
         <p><a class="btn btn-cta btn-cta-primary" href="">Sign Up for Pre-Screening</a></p>
     </div><!--//container-->
@@ -38,7 +38,7 @@
           </p>
         </div><!-- col-xs-12 col-md-6 -->
         <div class="col-xs-12 col-md-6 col-md-offset-1">
-          <%= image_tag 'landing_page/imac_lesson.png', class: 'img-responsive' %>
+          <%= image_tag 'landing_page/imac_lesson.png', class: 'img-responsive', style: 'float: right;' %>
         </div>
 
       </div><!-- row -->
@@ -66,8 +66,8 @@
           </p>
         </div><!-- col-xs-12 col-md-6 -->
 
-        <div class="col-xs-12 col-md-6 col-md-offset-1">
-          <%= image_tag 'startup2.jpg', class: 'img-responsive shadow_screenshot' %>
+        <div class="col-xs-12 col-md-5 col-md-offset-1">
+          <%= image_tag 'startup2.jpg', class: 'img-responsive shadow_screenshot', style: 'float: right;' %>
         </div>
 
       </div><!-- row -->
@@ -79,22 +79,85 @@
   <section id="skills" class = "section">
     <a class = "anchor" id = "skills_you_will_learn"></a>
       <div class="container">
-          <div class="row" style="margin-bottom: 90px;">
+          <div class="row" style="margin-bottom: 20px;">
               <div class="col-lg-12 text-center scroll">
-                  <h2 class = "title">Skills You Will Learn</h2>
+                  <h2 class = "title">Learn Practical, In-demand Skills</h2>
+                  <p>
+                    At TECHRISE, you will learn a set of marketable skills that will enable you to write robust web applications. We have designed the curriculum so that you will gain the experience of not only writing good code, but writing good code together with other people.
+                  </p>
               </div>
           </div>
           <div class="row">
             <% skills.each do |skill| %>
-              <div class="col-sm-4 portfolio-item text-center">
+              <div class="col-sm-2 col-xs-6 portfolio-item text-center">
                   <%= image_tag skill[2], class: 'skill_logo' %>
-                  <h3><%= skill[0] %></h3>
-                  <p><%= skill[1] %></p>
+                  <h5><%= skill[0] %></h5>
+                  <!-- <p><%= skill[1] %></p> -->
               </div>
             <% end %>
           </div>
+
+          <div class="col-xs-12" style="margin-bottom: 35px; margin-top: 55px;">
+            <h3 class="text-center">During the program, you will:</h3>
+          </div>
+
+          <div class="col-xs-12 col-md-6">
+            <ul class="skills_ul">
+              <li>Develop fully featured web applications</li>
+              <li>Learn how to use Github to collaborate with other developers</li>
+              <li>Write complex algorithms and data structures</li>
+            </ul>
+          </div>
+
+          <div class="col-xs-12 col-md-6">
+            <ul class="skills_ul">
+              <li>Build an advanced web application as part of an agile team</li>
+              <li>Learn and apply Object Oriented Programming, MVC, and test driven development</li>
+            </ul>
+          </div>
+
       </div>
   </section>
+
+  <section class="section">
+    <div class="container text-center">
+      <h3 class="title">Details</h3>
+
+      <div class="box">
+        <%= render 'details' %>
+      </div>
+
+      <div class="col-xs-12 text-center">
+        <h3>Support System</h3>    
+      </div>
+
+      <ul class="skills_ul support_ul">
+        <div class="col-xs-12 col-md-6">     
+          <li>Weekly Mentor Sessions</li>
+          <p>
+            Receive code reviews or go through coding problems with your mentor. Having a mentor is proven to accelerate your learning speeds.
+          </p>
+          <li>Daily Office Hours</li>
+          <p>
+            Come into the office to chat about any problems you are stuck on or any concerns that you might have.
+          </p>
+        </div>
+
+        <div class="col-xs-12 col-md-6">
+          <li>Option to get hired as a TECHRISE Mentor</li>
+          <p>
+            Upon graduation, we invite exceptional students to work with us as a mentor at TECHRISE.
+          </p>
+          <li>Opportunity to get matched with foreign startups</li>
+          <p>
+            Upon graduation, we may have opportunities for exceptional students to be matched with foreign startups in need of good developers.
+          </p>
+        </div>
+      </ul>
+
+    </div>
+  </section>
+
 
   <!-- For Who Section -->
   <!-- <section class = "section" id="for_who">
@@ -146,80 +209,6 @@
           </div>
       </div>
   </section> -->
-
-  <!-- About Section -->
-  <!-- <section class="our_story_section section" id="our_story">
-    <div class="our_story_section_wrapper">
-        <a class = "anchor" id = "about_us"></a>
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12 text-center">
-                      <h2 class = "section_header">Our Story</h2>
-                      <hr>
-                  </div>
-              </div>
-              <div class="row about_text scroll">
-                  <div class="col-lg-8 col-lg-offset-2">
-                    <p style="text-align: justify;"><span style="font-size: 25px;font-weight: 600;">Our story began when we fell in love with Nepal</span> and it’s beautiful people during our stay for a couple of months in 2015. We made lots of friends–friends who wanted to begin their own restaurant business, friends who wanted to create an environmentally friendly local community, friends who wanted a better future for themselves and those around them.
-                     </p>
-
-                    <p style="text-align: justify;">
-                      We wanted to help them turn those dreams into reality. With Takehiro’s passion for coding, and Natsuko’s drive to create social impact, TECHRISE was born.
-                      We believe that teaching coding skills through TECHRISE can help our friends gain greater economic opportunities and fulfill their dreams.
-                    </p>
-
-                    
-                  </div>
-
-                  <div class="col-xs-12 text-center">
-                    <h3>This is our way of sharing happiness.</h3>
-                    <h3>One line of code at a time.</h3>
-                    <p>- TECHRISE team</p>
-                  </div>
-
-                  <div class="col-lg-8 col-lg-offset-2 text-center" style = "padding:30px;">
-                      <h3 style = "font-weight: 600;">Click the button below to</h3>
-                      <h3 style = "font-weight: 600;margin:-5px 0px 30px 0px;">start your coding journey.</h3>
-                      <%= link_to 'START CODING NOW', new_user_registration_path, class: "btn btn-danger btn-lg", style: "color:white;" %>
-                  </div>
-              </div>
-          </div>
-    </div>
-  </section> -->
-
-  <!-- Why Techrise Section -->
-<!--   <section id="why_techrise" class="why_section section">
-    <div class="why_section_wrapper">
-        <a class = "anchor" id = "why_us"></a>
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12 text-center">
-                      <h2 class = "section_header">Why Techrise?</h2>
-                      <hr class="star-primary">
-                  </div>
-              </div>
-              <div class="row">
-                <div class = "col-sm-12 col-md-4 text-center">
-                  <h1>1-on-1 Mentor Sessions</h1>
-                  <p style="text-align:justify; font-size:20px !important;">
-                    Ask questions individually to your mentor and get the support you need. By having a mentor, you can learn quicker and more effectively.
-                  </p>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class = "col-sm-12 col-md-4 text-center">
-                  <h1>Build Real World Applications</h1>
-                  <p style="text-align:justify; font-size:20px !important;">
-                    Instead of just learning syntax and theory, we believe you can learn faster by actually building websites and web applications from day 1.
-                  </p>
-                </div>
-
-              </div>
-
-          </div>
-    </div>
-  </section>     -->    
 
   <!-- ******Testimonials Section****** -->
   <section class="section testimonials">
