--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -43,7 +43,7 @@
 
       </div><!-- row -->
 
-      <div class="row" style="margin-top: 120px;">
+      <div class="row" style="margin-top: 80px;">
 
         <div class="col-xs-12 col-md-5 col-md-offset-1 col-md-push-6">
           <h2 class="title">Learn With Peers</h2>
@@ -58,7 +58,7 @@
  
       </div><!-- row -->
 
-      <div class="row" style="margin-top: 120px; margin-bottom: 100px;">
+      <div class="row" style="margin-top: 80px;">
         <div class="col-xs-12 col-md-5">
           <h2 class="title">Learn With a Mentor</h2>
           <p>
@@ -79,7 +79,8 @@
   <section id="skills" class = "section">
     <a class = "anchor" id = "skills_you_will_learn"></a>
       <div class="container">
-          <div class="row" style="margin-bottom: 20px;">
+          <hr>
+          <div class="row" style="margin-bottom: 20px;padding-top: 80px;">
               <div class="col-lg-12 text-center scroll">
                   <h2 class = "title">Learn Practical, In-demand Skills</h2>
                   <p>
@@ -121,13 +122,16 @@
 
   <section class="section">
     <div class="container text-center">
-      <h3 class="title">Details</h3>
+
+      <hr>
+
+      <h3 class="title" style="padding-top: 80px;">Details</h3>
 
       <div class="box">
         <%= render 'details' %>
       </div>
 
-      <div class="col-xs-12 text-center">
+      <div class="col-xs-12 text-center" style="margin-top:30px;">
         <h3>Support System</h3>    
       </div>
 
@@ -293,9 +297,10 @@
     </div>
   </section>
 
+
   <section class="section press">
     <div class="container text-center">
-
+        <hr>
         <h2 class="title">Partnerships</h2>
         <%= image_tag 'http://static1.squarespace.com/static/5390cc63e4b02566a5bb8bf0/t/539718f5e4b076c79e506193/1464376473863/?format=1500w', class: 'partnership_logo' %>
         <%= image_tag 'https://www.aluxurelife.com/assets/logo-285af2f803977bcecf652fef1f6cb49aaf5cadee7c263ebe3108c41bf3805344.png', class: 'partnership_logo' %>
