--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -28,5 +28,5 @@
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="Coding Bootcamp in Nepal | TECHRISE"/>
 <meta property="og:url" content = "http://www.techrise.me/">
-<meta property="og:image" content="http://www.techrise.me/assets/techrise_big.png"/>
+<meta property="og:image" content="http://www.techrise.me/assets/TECHRISE_big.png"/>
 <meta property="og:description" content="Learn how to code with interactive lessons and personal mentors at TECHRISE. Learn how to create web applications with HTML/CSS, Ruby on Rails, JavaScript, and other essential skills for all aspiring web developers and entrepreneurs."/>
